--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
@@ -8,13 +8,13 @@ unlisted: true
 
 Salut à tous !
 
-**[@ThisWeekInReact](https://twitter.com/ThisWeekInReact)** is our brand-new X account, hit subscribe! The promise is to share and retweet interesting things happening in the React community in near-real-time, and to be as **high-signal/low-noise** as possible.
+**[@ThisWeekInReact](https://twitter.com/ThisWeekInReact)** est notre tout nouveau compte X, abonnez-vous ! Le but est d'y partager et de retweeter les choses intéressantes qui se passent dans la communauté React en temps réel, avec un rapport signal/bruit le plus élevé possible.
 
-This week React Server Components have been once-again the subject of various articles and discussions. The community has mitigated feelings about Next.js App Router. Even if people embrace the vision, they seem a little disappointed by its current implementation. Let's hope it's only temporary 🤞.
+Cette semaine, les React Server Components ont été une fois de plus le sujet de divers articles et discussions. La communauté a des sentiments mitigés sur Next.js App Router. Même si les gens adhèrent à la vision, ils semblent un peu déçus par son implémentation actuelle. Espérons que ce ne soit que temporaire 🤞.
 
-React Native has been particularly interesting this week. The [State of React Native](https://results.stateofreactnative.com/) survey results have been published, and the general feeling towards React Native is increasingly positive. There are also interesting bits related to Skia, Reanimated, or the bridgeless mode. The community is excited about Expo becoming a full-stack universal framework.
+React Native a été particulièrement intéressant cette semaine. Les résultats du sondage [State of React Native](https://results.stateofreactnative.com/) ont été publiés, et le sentiment général à l'égard de React Native est de plus en plus positif. Il y a également des éléments intéressants liés à Skia, Reanimated, ou le mode bridgeless. La communauté est enthousiaste à l'idée qu'Expo devienne un framework universel full-stack.
 
-Happy reading!
+Bonne lecture !
 
 <!-- truncate -->
 
@@ -52,26 +52,26 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 🎥 [**Next.js Explained - Partial Prerendering**](https://www.youtube.com/watch?v=MTcPrTIBkpA)
 
-It’s is not often that a video makes the headlines here, but this one is different for a few reasons.
+Il n'est pas fréquent qu'une vidéo fasse les gros titres ici, mais celle-ci est différente pour plusieurs raisons.
 
-First the topic is super interesting and well-explained with many animated visualizations. Partial pre-rendering is a [Next.js 14 experimental feature](https://nextjs.org/blog/next-14#partial-prerendering-preview) that completes the Next.js vision and offers the best of both worlds between static and dynamic rendering. This makes Next.js a multi-paradigm framework that supports all ranges of rendering diversity. This new feature is simple to adopt, builds on top of Suspense, and doesn’t introduce new APIs: you just need to turn a flag on.
+Tout d'abord, le sujet est très intéressant et bien expliqué avec de nombreuses visualisations animées. Le Partial Prerendering est une [fonctionnalité expérimentale de Next.js 14](https://nextjs.org/blog/next-14#partial-prerendering-preview) qui complète la vision de Next.js et offre le meilleur des deux mondes entre le rendu statique et dynamique. Cela fait de Next.js un framework multi-paradigme qui prend en charge une grande diversité de rendus. Cette nouvelle fonctionnalité est simple à adopter, elle s'appuie sur Suspense et n'introduit pas de nouvelles API : il suffit d'activer un flag.
 
-Second: this incredibly well-produced video has been created with [Remotion](https://www.remotion.dev/), using React web code 🙉. Good job Delba, you nailed it! We can’t wait to see more videos like this and to know more about your Remotion creative process. On a related note, the Remotion team just shared theirs with a [behind the scene of GitHub Unwrapped 2023](https://www.youtube.com/watch?v=WW8vIZ1kwR0).
+Deuxièmement : cette vidéo incroyablement bien réalisée a été créée avec [Remotion](https://www.remotion.dev/), en utilisant du code React web 🙉. Superbe travail Delba ! Nous sommes impatients de voir d'autres vidéos comme celle-ci et d'en savoir plus sur ton processus créatif avec Remotion. Dans le même ordre d'idées, l'équipe Remotion vient de partager un [behind the scene du projet GitHub Unwrapped 2023](https://www.youtube.com/watch?v=WW8vIZ1kwR0).
 
 ---
 
 - 💸 [Accelerate your workflow with MightyMeld, a visual dev tool for React codebases. Drag, drop, click, and prompt your UI into place while you hand-code the rest of it.](https://www.mightymeld.com/?utm_source=thisweekinreact5&utm_medium=newsletter&utm_campaign=1&utm_content=top)
-- 👀 [React core PR - react-server-dom-parcel package](https://github.com/facebook/react/pull/28138): Devon from Parcel working on a new bundler integration.
+- 👀 [React core PR - react-server-dom-parcel package](https://github.com/facebook/react/pull/28138): Devon travaille sur une nouvelle integration RSC pour le bundler Parcel.
 - 👀 [Remix - support for Cloudflare through the Remix Vite plugin](https://github.com/remix-run/remix/tree/dev/templates/unstable-vite-cloudflare)
 - 🐦 [Partykit - Real-time React Server Component sneak-peek](https://twitter.com/threepointone/status/1751963277394116993)
-- 📜 [My first impressions of Panda CSS](https://newsletter.baptiste.devessier.fr/archive/my-first-impressions-of-panda-css/): Baptiste likes Tailwind but now prefers Panda for multiple reasons, including type-safety, the ability to group styles and make them more readable, and its out-of-the-box support for styles merging and variants.
-- 📜 [Fix Next.js Routing to Have Full Type-Safety](https://www.flightcontrol.dev/blog/fix-nextjs-routing-to-have-full-type-safety): the Next.js typedRoute experimental feature is not good enough. We can improve routing type-safety (route params, search params, linking…) thanks to a route builder API.
-- 📜 [Migrating to Next.js App Router: the good, bad, and ugly](https://www.flightcontrol.dev/blog/nextjs-app-router-migration-the-good-bad-and-ugly): Flightcontrol rebuilt from scratch their dashboard with Next.js App Router and share feedback. There are positive experiences, but overall their team would have chosen Remix instead, and they’d prefer to use another language than using the Next.js dev server again 😅 (note they are stuck on Next.js 13.5 and performance improved lately).
-- 📜 [How To Use forwardRef With Generic Components](https://www.totaltypescript.com/forwardref-with-generic-components): Matt wraps forwardRef to redefine its types and fix type inference problems.
-- 📜 [Updating public Next.js environment variables without rebuilds](https://phase.dev/blog/nextjs-public-runtime-variables/): the NEXT_PUBLIC env variables are inlined in the client bundles at build time. This proposes to use a find-and-replace script to update them without rebuilding.
-- 📜 [How to start a React Project in 2024](https://www.robinwieruch.de/react-starter/): Robin discusses the tradeoffs of starting a React project with Vite, Next.js or Astro.
-- 📜 [Including static files in App Router RSCs](https://www.hipstersmoothie.com/blog/posts/including-static-files-with-rscs): Shows usage of advanced Webpack features such as require.context and inline loaders.
-- 📜 [Take a Qwik Break from React with Astro](https://thenewstack.io/take-a-qwik-break-from-react-with-astro/): Paul compares Qwik and React over various examples. “Write code like React, Browser tastes of Vanilla”.
+- 📜 [My first impressions of Panda CSS](https://newsletter.baptiste.devessier.fr/archive/my-first-impressions-of-panda-css/): Baptiste aime Tailwind mais préfère désormais Panda pour de multiples raisons, notamment la typesafety, la possibilité de grouper les styles et de les rendre plus lisibles, et la fusion des styles et des variantes.
+- 📜 [Fix Next.js Routing to Have Full Type-Safety](https://www.flightcontrol.dev/blog/fix-nextjs-routing-to-have-full-type-safety): la fonctionnalité expérimentale typedRoute de Next.js n'est pas suffisante. Brandon améliore le typage du routage (page params, search params, liens...) grâce à une API `makeRoute()`.
+- 📜 [Migrating to Next.js App Router: the good, bad, and ugly](https://www.flightcontrol.dev/blog/nextjs-app-router-migration-the-good-bad-and-ugly): Flightcontrol a reconstruit de zéro leur dashboard avec Next.js App Router et partage un retour d'expérience. Il y a du positif, mais globalement leur équipe aurait choisi Remix à la place, et ils préfèreraient carrément utiliser un autre langage que d'utiliser à nouveau le serveur de développement Next.js 😅 À noter qu'ils sont bloqués sur Next.js 13.5 et que les performances se sont améliorées dernièrement.
+- 📜 [How To Use forwardRef With Generic Components](https://www.totaltypescript.com/forwardref-with-generic-components): Matt propose un wrapper autour de forwardRef pour redéfinir ses types et fixer les problèmes d'inférence.
+- 📜 [Updating public Next.js environment variables without rebuilds](https://phase.dev/blog/nextjs-public-runtime-variables/): les variables d'env NEXT_PUBLIC sont inlinées dans le bundle client lors du build. Cet article propose un script find-and-replace pour pouvoir les updater sans rebuilder l'app.
+- 📜 [How to start a React Project in 2024](https://www.robinwieruch.de/react-starter/): Robin explique les tradeoffs de démarrer un projet avec Vite, Next.js ou Astro.
+- 📜 [Including static files in App Router RSCs](https://www.hipstersmoothie.com/blog/posts/including-static-files-with-rscs): montre l'usage de quelques features Webpack avancées: require.context et inline loaders.
+- 📜 [Take a Qwik Break from React with Astro](https://thenewstack.io/take-a-qwik-break-from-react-with-astro/): Paul compare Qwik et React à travers plusieurs exemples. “Write code like React, Browser tastes of Vanilla”.
 - 📜 [Where do React Server Components fit in the history of web development?](https://dev.to/matfrana/where-do-react-server-components-fit-in-the-history-of-web-development-1l0f)
 - 📦 [Remix-Client-Cache - using clientLoader to cache server loader data](https://github.com/Code-Forge-Net/remix-client-cache)
 - 📦 [StyleX 0.5 - new stylex.attrs function, ESLint sort-keys rule, Babel aliases option, esbuild plugin](https://stylexjs.com/blog/v0.5.0)
@@ -81,7 +81,7 @@ Second: this incredibly well-produced video has been created with [Remotion](htt
 - 📦 [fumadocs - powerful framework for building documentation sites in Next.js](https://github.com/fuma-nama/fumadocs)
 - 📦 [React Bricks 4.2 - RSC support](https://docs.reactbricks.com/docs/rsc/visual-components/)
 - 📦 [Redux Toolkit 2.1](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.1.0)
-- 🎥 [Jack Herrington - Are RSCs and NextJS Really That Bad?](https://www.youtube.com/watch?v=u0OMdWJfdhg): compares side-by-side 3 cases where App Router has a much better DX than Page Router, and highlights how easy it is to encapsulate and distribute RSC logic inside a package.
+- 🎥 [Jack Herrington - Are RSCs and NextJS Really That Bad?](https://www.youtube.com/watch?v=u0OMdWJfdhg): compare coté à coté 3 exemples ou l'App Router offre une meilleur DX comparée au Page Router, et met en avant la facilité avec laquelle on peut encapsuler et distribuer des RSC dans des packages.
 - 🎥 [Nadia Makarevich - Advanced React - All about memoization in React](https://www.youtube.com/watch?v=huBxeruVnAM)
 
 <SubscribeFormEmbed placement="middle" />
@@ -109,22 +109,22 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 📱 React-Native {#react-native}
 
-This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel free to send us your comments by email or on [Twitter](https://twitter.com/bndkt)!
+Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndkt). N'hésitez pas à nous envoyer vos commentaires par email ou sur [Twitter](https://twitter.com/bndkt) !
 
 [![State of React Native 2023 - Survey Results](/emails/issues/172/stateofrn.jpg)](https://results.stateofreactnative.com/)
 
 **[State of React Native 2023 - Survey Results](https://results.stateofreactnative.com/)**
 
-I’m a big fan of all the “State of …” surveys, because they give us a unique insight into what’s going on in the ecosystem. It’s one thing to follow the hype generated on X and elsewhere, but another thing to see stats of what developers actually use. So I’m really happy to see last year’s State of React Native results published! And as this is now the second year this survey is conducted, we can also identify some trends by comparing the results to the year before. For all the details, [have a look at the results yourself](https://results.stateofreactnative.com/)! I’ll just highlight a few things that I found interesting, some of them really surprised me:
+Je suis un grand fan de tous les sondages "State of ...", car ils nous donnent un aperçu unique de ce qui se passe dans l'écosystème. C'est une chose de suivre la hype médiatique généré sur X et ailleurs, mais c'en est une autre de voir les statistiques de ce que les développeurs utilisent réellement. Je suis donc très heureux de voir les résultats de l'état de React Native de l'année dernière publiés ! Et comme c'est maintenant la deuxième année que ce sondage est mené, nous pouvons commencer à identifier certaines tendances en comparant les résultats à ceux de l'année précédente. Pour tous les détails, [jetez un coup d'œil aux résultats] (https://results.stateofreactnative.com/) ! Je me contenterai de souligner quelques points que j'ai trouvés intéressants et dont certains m'ont vraiment surpris :
 
-- State management continues to be in a very interesting state (pun intended), with Redux taking the last place in retention with only 44 % (down from 57 % last year), but still clinging to second place after React’s native capabilities in terms of usage with 78 % (down from 85 %).
-- Data fetching is a category where the results are in line with the amount of attention that can be observed on social media, with TanStack Query and tRPC taking top places in terms of interest and retention, and Meta’s own Relay staying mostly irrelevant outside of Meta with only 5 % usage.
-- The future of navigation is Expo Router, which exploded from 12 % usage last year to 40 % today.
-- Gauging by social media activity, styling seems to be the most talked about category with an abundance of options. In terms of usage, the classics (StyleSheet API, inline styling, styled components) remain the dominant options, with NativeWind and Tamagui catching up. Tamagui managed to generate the most interest in the past year (and also has the most retention and interest as a UI component library), closely followed by a new contender: react-native-unistyles.
-- Special shoutout to Expo: In the “React Native tools” section, 6 out of the top 10 tools as well as the top 2 options in the deployment category are made by Expo.
-- Over 85 % of respondents think that React Native is moving in the right direction and the share of developers that find that building RN apps is overly complex right now decreased from about 30 % to 25 % - that’s still too much, but we seem to be moving in the right direction!
+- Le state management est dans tous ses états ! Redux prenant la dernière place en termes de rétention avec seulement 44 % (en baisse par rapport à 57 % l'année dernière), mais s'accrochant toujours à la deuxième place après les capacités natives de React en termes d'utilisation avec 78 % (en baisse par rapport à 85 %).
+- La collecte de données est une catégorie où les résultats sont conformes à l'attention qui peut être observée sur les médias sociaux, avec TanStack Query et tRPC qui occupent les premières places en termes d'intérêt et de rétention, et le propre Relay de Meta qui reste pratiquement sans intérêt en dehors de Meta avec seulement 5 % d'utilisation.
+- L'avenir de la navigation est Expo Router, qui a explosé de 12 % d'utilisation l'année dernière à 40 % aujourd'hui.
+- Si l'on en juge par l'activité des médias sociaux, le style semble être la catégorie la plus discutée, avec une abondance d'options. En termes d'utilisation, les classiques (StyleSheet API, inline styling, styled components) restent les options dominantes, avec NativeWind et Tamagui qui les rattrapent. Tamagui a réussi à susciter le plus d'intérêt au cours de l'année écoulée (et a également le plus de rétention et d'intérêt en tant que bibliothèque de composants d'interface utilisateur), suivi de près par un nouveau concurrent : react-native-unistyles.
+- Un coup de chapeau spécial à Expo : Dans la section "Outils React Native", 6 des 10 meilleurs outils ainsi que les 2 meilleures options dans la catégorie déploiement sont fabriqués par Expo.
+- Plus de 85 % des répondants pensent que React Native évolue dans la bonne direction et la part des développeurs qui trouvent que la création d'applications RN est trop complexe actuellement a diminué d'environ 30 % à 25 % - c'est encore trop, mais nous semblons évoluer dans la bonne direction !
 
-Overall, really interesting results that are worth [checking out](https://results.stateofreactnative.com/) in detail! Many thanks to Bartłomiej, Kacper and Software Mansion for making this happen!
+Dans l'ensemble, des résultats vraiment intéressants qui méritent d'être [vérifiés] (https://results.stateofreactnative.com/) en détail ! Un grand merci à Bartłomiej, Kacper et Software Mansion pour avoir rendu cela possible !
 
 ---
 
