--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/172/index.mdx
@@ -3,7 +3,6 @@ slug: /172
 title: "React Hebdo #172: Next.js, PPR, Remotion, State of React Native, Parcel, Panda, StyleX, Cosmos, Remix, RTK, TypeScript, Skia, Reanimated, RNTL, Storybook, Flashlight, Tamagui..."
 authors: [slorber]
 date: 01-31-2024
-unlisted: true
 ---
 
 Salut à tous !
@@ -118,36 +117,36 @@ Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndk
 Je suis un grand fan de tous les sondages "State of ...", car ils nous donnent un aperçu unique de ce qui se passe dans l'écosystème. C'est une chose de suivre la hype médiatique généré sur X et ailleurs, mais c'en est une autre de voir les statistiques de ce que les développeurs utilisent réellement. Je suis donc très heureux de voir les résultats de l'état de React Native de l'année dernière publiés ! Et comme c'est maintenant la deuxième année que ce sondage est mené, nous pouvons commencer à identifier certaines tendances en comparant les résultats à ceux de l'année précédente. Pour tous les détails, [jetez un coup d'œil aux résultats] (https://results.stateofreactnative.com/) ! Je me contenterai de souligner quelques points que j'ai trouvés intéressants et dont certains m'ont vraiment surpris :
 
 - Le state management est dans tous ses états ! Redux prenant la dernière place en termes de rétention avec seulement 44 % (en baisse par rapport à 57 % l'année dernière), mais s'accrochant toujours à la deuxième place après les capacités natives de React en termes d'utilisation avec 78 % (en baisse par rapport à 85 %).
-- La collecte de données est une catégorie où les résultats sont conformes à l'attention qui peut être observée sur les médias sociaux, avec TanStack Query et tRPC qui occupent les premières places en termes d'intérêt et de rétention, et le propre Relay de Meta qui reste pratiquement sans intérêt en dehors de Meta avec seulement 5 % d'utilisation.
+- Le data fetching est une catégorie où les résultats sont conformes à ce que nous attendions, avec TanStack Query et tRPC qui occupent les premières places en termes d'intérêt et de rétention. Relay est pratiquement inutilisé en dehors de Meta avec seulement 5 % d'utilisation.
 - L'avenir de la navigation est Expo Router, qui a explosé de 12 % d'utilisation l'année dernière à 40 % aujourd'hui.
-- Si l'on en juge par l'activité des médias sociaux, le style semble être la catégorie la plus discutée, avec une abondance d'options. En termes d'utilisation, les classiques (StyleSheet API, inline styling, styled components) restent les options dominantes, avec NativeWind et Tamagui qui les rattrapent. Tamagui a réussi à susciter le plus d'intérêt au cours de l'année écoulée (et a également le plus de rétention et d'intérêt en tant que bibliothèque de composants d'interface utilisateur), suivi de près par un nouveau concurrent : react-native-unistyles.
-- Un coup de chapeau spécial à Expo : Dans la section "Outils React Native", 6 des 10 meilleurs outils ainsi que les 2 meilleures options dans la catégorie déploiement sont fabriqués par Expo.
-- Plus de 85 % des répondants pensent que React Native évolue dans la bonne direction et la part des développeurs qui trouvent que la création d'applications RN est trop complexe actuellement a diminué d'environ 30 % à 25 % - c'est encore trop, mais nous semblons évoluer dans la bonne direction !
+- Le styling semble être la catégorie la plus compétitive, avec une abondance d'options. En termes d'utilisation, les classiques (StyleSheet API, inline styling, styled components) restent des options dominantes, avec NativeWind et Tamagui qui les rattrapent. Tamagui a réussi à susciter le plus d'intérêt au cours de l'année écoulée (et a également le plus de rétention et d'intérêt en tant que bibliothèque de composants d'interface utilisateur), suivi de près par un nouveau concurrent : react-native-unistyles.
+- Bravo à Expo qui a créé 6 des 10 outils les plus populaires dans la catégorie "Outils React Native", et les 2 meilleures options pour le déploiement.
+- Plus de 85 % des répondants pensent que React Native évolue dans la bonne direction. La part des développeurs qui trouvent que la création d'applications RN est trop complexe actuellement a diminué d'environ 30 % à 25 % - c'est encore trop, mais nous semblons évoluer dans la bonne direction !
 
-Dans l'ensemble, des résultats vraiment intéressants qui méritent d'être [vérifiés] (https://results.stateofreactnative.com/) en détail ! Un grand merci à Bartłomiej, Kacper et Software Mansion pour avoir rendu cela possible !
+Dans l'ensemble, des résultats vraiment intéressants qui méritent d'être [étudiés en détail](https://results.stateofreactnative.com/) ! Un grand merci à Bartłomiej, Kacper et Software Mansion pour avoir rendu cela possible !
 
 ---
 
 - 💸 [Moropo - Stop Losing Days to Detox and Build Meaningful Tests in Minutes](https://www.moropo.com?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20240131)
 - 👀 [React Native 0.74 PR - Make bridgeless mode the default when the New Architecture is enabled](https://github.com/facebook/react-native/pull/42714)
-- 👀 [Reanimated PR - Generators support](https://github.com/software-mansion/react-native-reanimated/pull/5565): William Candillon feels productive writing animations with generators, and contributed this new feature to Reanimated (🐦 [demo](https://twitter.com/wcandillon/status/1751893521907261773))
-- 👀 [Flashlight React Native performance dashboard](https://app.flashlight.dev/projects/react-native): this uses Flashlight to measure performance all React Native versions over time. For now there’s only one FlatList-based scenario.
+- 👀 [Reanimated PR - Generators support](https://github.com/software-mansion/react-native-reanimated/pull/5565): William Candillon est productive en écrivant des animations avec des générateurs (🐦 [demo](https://twitter.com/wcandillon/status/1751893521907261773)), et a dans ce sens contribué cette feature dans Reanimated.
+- 👀 [Flashlight React Native performance dashboard](https://app.flashlight.dev/projects/react-native): utilise Flashlight pour mesurer la performance de toutes les versions React Native sur divers scenarios, dans le but de détecter les améliorations et regressions de performance de React Native core. Pour l'instant il n'y en a qu'un seul basé sur FlatList.
 - 🐦 [React Native visionOS - New 𝚂𝚙𝚊𝚝𝚒𝚊𝚕 API coming soon to](https://x.com/o_kwasniewski/status/1750532404245373434?s=20)
-- 📖 [Expo Docs - Using Sentry](https://docs.expo.dev/guides/using-sentry/): Using Sentry with Expo got way easier in SDK 50: Now only needs one dependency (@sentry/react-native), and doesn’t require you to configure hooks in app.json.
-- 📖 [Skia Docs - new Atlas component - efficiently draw a very large number of similar textures/images](https://shopify.github.io/react-native-skia/docs/shapes/atlas/): Here’s a great 🐦 [demo](https://twitter.com/alihdjr/status/1751175731533488464) to see it in action.
+- 📖 [Expo Docs - Using Sentry](https://docs.expo.dev/guides/using-sentry/): utiliser Sentry avec Expo est plus facile avec le SDK 50, il suffit d'utiliser la dépendance `@sentry/react-native`, et plus besoin de configurer des hooks dans `app.json`.
+- 📖 [Skia Docs - new Atlas component - efficiently draw a very large number of similar textures/images](https://shopify.github.io/react-native-skia/docs/shapes/atlas/): voir également cette belle 🐦 [demo](https://twitter.com/alihdjr/status/1751175731533488464) du composant Atlas.
 - 🧑‍🎓 [Build and Deploy React Native Apps with Expo EAS - Free Egghead course from Expo’s Kadi Kraman](https://egghead.io/courses/build-and-deploy-react-native-apps-with-expo-eas-85ab521e)
-- 📜 [John Gruber - Apple’s Plans for the DMA in the European Union](https://daringfireball.net/2024/01/apples_plans_for_the_dma): Apple is introducing a host of changes to the App Store in response to demands by the EU, in a way that has by many press outlets been described as “malicious compliance.” (also see: 📖 [Apple Developer Docs](https://developer.apple.com/support/alternative-browser-engines/))
-- 📜 [Recommended practices for React Native Testing Library in 2024](https://mdj.hashnode.dev/recommended-practices-for-react-native-testing-library-in-2024): RNTL author Maciej shared tips for people that might know the library but maybe haven’t kept up with the latest changes and improvements (like screen API and semantic queries).
-- 📜 [Communicating with React Native Web Views](https://making.close.com/posts/react-native-webviews): Using web views can be a good way to reuse parts of a web app, but those parts can also feel disconnected from the native part - this article highlights how to avoid this by establishing communication between native and web.
+- 📜 [John Gruber - Apple’s Plans for the DMA in the European Union](https://daringfireball.net/2024/01/apples_plans_for_the_dma): Apple a annoncé la possibilité d'utiliser un App Store alternatif et un runtime JS autre que Webkit pour l'Europe, pour être conforme aux demandes de l'Union Européenne. Mais en pratique cela est difficilement utilisable, et la presse a décrit cela comme une "conformité malveillante". (voir aussi: 📖 [Apple Developer Docs - Alternative Browser Engines](https://developer.apple.com/support/alternative-browser-engines/))
+- 📜 [Recommended practices for React Native Testing Library in 2024](https://mdj.hashnode.dev/recommended-practices-for-react-native-testing-library-in-2024): l'auteur de la lib Maciej partage diverses astuces et nouvelles APIs à connaitre, comme l'API screen ou l'usage de semantic queries.
+- 📜 [Communicating with React Native Web Views](https://making.close.com/posts/react-native-webviews): L'utilisation de WebViews peut être un bon moyen de réutiliser des parties d'une application web, mais ces parties peuvent aussi se sentir déconnectées de la partie native. Cet article montre comment éviter cela en établissant une communication entre le natif et le web via un bridge fortement typé.
 - 📜 [Building a PhotoRoom-like background remover app with React Native and Skia](https://medium.com/@ludwighenne/building-a-photoroom-like-background-remover-app-with-react-native-and-skia-%EF%B8%8F-540743c6ec0f)
-- 📦 [React Native Storybook 7](https://github.com/storybookjs/react-native/discussions/545): After some time, RN Storybook has finally catched up to the major version of the “parent project.”
+- 📦 [React Native Storybook 7](https://github.com/storybookjs/react-native/discussions/545): la version React Native de Storybook a rattrapé son retard sur le projet parent.
 - 📦 [React Native 0.73.3 - Bug fixes](https://github.com/facebook/react-native/releases/tag/v0.73.3)
 - 📦 [vision-camera-resize-plugin 2.0: Full rewrite to C++, much faster performance, and customizeable cropping logic](https://github.com/mrousavy/vision-camera-resize-plugin/releases/tag/v2.0.0)
 - 📦 [Tamagui 1.88 - Biggest Tamagui release, brings Expo SDK 50 support, simplifies setup via new Metro plugin](https://github.com/tamagui/tamagui/releases/tag/v1.88.0)
 - 📦 [Create Expo Stack 2.4 - Starter with Expo SDK 50, Expo Router v3, NativeWind v4, Shopify’s Restyle, and Unistyles](https://github.com/danstepanov/create-expo-stack/releases/tag/create-expo-stack%402.4.0)
 - 🎙️ [RNR 286 - What’s new in React Native 0.73?](https://x.com/ReactNativeRdio/status/1751015494591918434?s=20)
 - 🎙️ [Rocket Ship 27 - React Native’s Superpower with Theo Browne](https://share.transistor.fm/s/5b8f8a1a)
-- 🎥 [Simon Grimm - Can this replace NextJS?](https://www.youtube.com/watch?v=gzehQxHxtfw): Expo Router becoming an universal full-stack React framework makes it a direct competitor to Next.js.
+- 🎥 [Simon Grimm - Can this replace NextJS?](https://www.youtube.com/watch?v=gzehQxHxtfw): Expo Router qui devient un framework fullstack universel en fait maintenant un concurrent direct à Next.js.
 - 🎥 [Theo Brown - Mobile Devs Hate Servers. Expo Wants To Fix That.](https://www.youtube.com/watch?v=2P0q1EdH_oQ)
 
 ---
