--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/173/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/173/index.mdx
@@ -10,9 +10,8 @@ Salut à tous !
 
 <Todo />
 
-*   📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
-    
-*   📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 <!-- truncate -->
 
@@ -63,14 +62,10 @@ Clerk streamlines React app authentication and user management, ensuring a quick
 
 Experience the benefits of Clerk:
 
-*   💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
-    
-*   📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
-    
-*   ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
-    
-*   🎁 User management, social login, magic links, MFA, and more out of the box
-    
+- 💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
+- 📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
+- ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
+- 🎁 User management, social login, magic links, MFA, and more out of the box
 
 Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts/overview?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=02-07-24) to kickstart your project🚀
 
@@ -86,11 +81,11 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 📜 [Intégration de App Router au sein d'une librairie Next.JS](https://www.premieroctet.com/blog/integration-de-app-router-dans-next-admin)
+- 📜 [Applications mobiles et obligation d’accessibilité : que dit la loi ?](https://www.bam.tech/article/applications-mobiles-et-obligation-daccessibilite-que-dit-la-loi)
+- 🎥 [Next.js 14 et supabase](https://www.youtube.com/watch?v=ANGGGlMT3ZA&list=PLVq2Nd186wZEEPmW5Un25YZ0B0qC4GLag)
+- 🎥 [Actus JS de la semaine - Husky v9 qui se simplifie! Adonis, React-Admin](https://www.youtube.com/watch?v=ryIZaqcKfHM)
+- 🎥 [Ma stack ultime pour créer un SaaS en 2024](https://www.youtube.com/watch?v=myfwQIyc5S0)
 
 ---
 
