--- a/website/newsletter/173/index.mdx
+++ b/website/newsletter/173/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /173
-title: "This Week In React #173: ..."
+title: "This Week In React #173: Million, Storybook, visionOS, Expo, Conform, Next.js, Remix, Astro, Apollo, useFormStatus, Framer Motion, Reanimated, TypeScript, JQuery, Express, Interop..."
 authors: [slorber]
 date: 02-07-2024
 unlisted: true
@@ -8,12 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-Break on 14th feb
+This week we have many great React articles and a few interesting releases. It seems that React is constantly being criticized, but overall, the arguments are always the same and many of them seems a bit outdated, and never acknowledging what React does better than other solutions.
 
-RN thread:
-https://twitter.com/bndkt/status/1755203992039424377
+The React Native world is taken over by the official launch of Vision Pro!
 
-Reply to this email?
+We are trying something new this week, with a very first [Twitter thread dedicated to React Native](https://twitter.com/bndkt/status/1755203992039424377). Let us know if you like it.
+
+The newsletter will be on a break next week. We'll be back the 21th of February 👋.
+
+I'd also like to ask you a small favor: can you reply to this e-mail with a simple "hello" or a comment? This helps increase our email deliverability. Thanks!
 
 <!-- truncate -->
 
@@ -46,7 +49,13 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 ## ⚛️ React {#react}
 
-[Million 3.0 - Optimizing compiler for React - New optimized hydration system, improved stability](https://million.dev/blog/million-3): A complete rewrite that fixes caveats of previous versions. It looks like Million is planning to create a linter to help us debug and maintain great web performance.
+[![Million 3.0](/emails/issues/173/million.jpg)](https://million.dev/blog/million-3)
+
+**[Million 3.0](https://million.dev/blog/million-3)**
+
+Million is an optimizing compiler for React. This new major version is a complete rewrite that fixes caveats of previous versions, handles more edge cases, brings a new optimized hydration system and improves stability.
+
+It looks like Million is planning to help us debug and maintain great web performance over time. According to their 🐦 [launch trailer](https://twitter.com/aidenybai/status/1753456530652107072), a million linter is on the roadmap.
 
 ---
 
@@ -160,8 +169,6 @@ It’s early days, but it's super exciting to see RN embrace a new platform so q
 ---
 
 ## 🤭 Fun {#fun}
-
-<Todo />
 
 [![alt](/emails/issues/173/meme.jpg)](https://twitter.com/wesbos/status/1754347448623890719)
 
